# data_reader

./: CMakeLists.txt  filereader.cpp  filereader.h  filereaderBAfilter.cpp  filereaderBebop.cpp  main.cpp
pngwriter/: CMakeLists.txt  pgmtopng.cpp  pgmtopng.h
